Fixed wrong position of onLoad call

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 #body{
-    width: 960px;
-margin: 0 auto;
+    width: 960px;   
+    margin: 0 auto;
     position: relative;
 }
 #content {
@@ -9,8 +9,8 @@ margin: 0 auto;
 }
 
 #content div:first-child{
-    position: absolute;
-    margin-top:100px;
+    position: relative;
+    
 }
 
 #home_wrapper {
@@ -32,5 +32,19 @@ margin: 0 auto;
     background-color: #00f;
 }
 
+.transholder {
+    width: 100%;
+    height: 100%;
+}
 
+.trans {
+    width:200px; 
+    height:200px;
+    background-color: #000;
+}
 
+@media (min-width: 968px) {
+    #content div:first-child{
+        margin-top: 60px;
+    }
+}
